added route to get user details
