# internal/domain/user/routes.go
@@ -4,7 +4,7 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-func RegisterRoutes(e *echo.Echo, h *Handler) {
+func RegisterRoutes(e *echo.Echo, h *Handler, authMiddleware echo.MiddlewareFunc) {
 	auth := e.Group("/auth")
 
 	// Public routes
@@ -13,4 +13,8 @@ func RegisterRoutes(e *echo.Echo, h *Handler) {
 	auth.POST("/confirm-registration", h.ConfirmRegistration)
 	auth.POST("/password-reset-request", h.RequestPasswordReset)
 	auth.POST("/confirm-password-reset", h.ConfirmPasswordReset)
+
+	// Protected routes
+	user := e.Group("/user", authMiddleware)
+	user.GET("/detail", h.UserDetail)
 }
